Moksh logo size corrected
Moksh logo is not looking properly. Its size is corrected and it does not look compressed as before.

--- a/style.css
+++ b/style.css
@@ -321,7 +321,9 @@ a.dropdown-item{
   align-items: center;
   position: relative;
 }
-
+img, video {
+    height: 100%;
+}
 .circle1 {
   width: 200px;
   height: 200px;
